# ModeRL

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  README.org  pyproject.toml  requirements.txt  setup.py
examples/: quadcopter-navigation-via-mode-constrained-mbrl.ipynb
examples/mcycle/: train_MixtureOfSVGPExperts.py
examples/point_mass/: learn_dynamics.py  learn_dynamics_svgp.py  optimise_trajectory.py
examples/quadcopter_subject_to_turbulent_dynamics_mode/: run_mode_rl.py
examples/quadcopter_subject_to_turbulent_dynamics_mode/configs/: main.yaml
examples/velocity_controlled_point_mass/: mode_opt_continue_training_dynamics.py  mode_opt_control_as_inference_traj_opt.py  mode_opt_explore.py  mode_opt_geodesic_collocation_traj_opt.py  mode_opt_riemannian_energy_traj_opt.py  mode_opt_train_dynamics.py  svgp_baseline_traj_opt.py  svgp_train_dynamics.py  utils.py
examples/velocity_controlled_point_mass/data/: generate_const_action_full_dataset.py  generate_full_dataset.py  generate_initial_dataset.py  utils.py
examples/velocity_controlled_point_mass/notebooks/: explorative.org  explorative_mode_policy_gradient_scenario_7.ipynb  explorative_mode_trajectory_optimisation_greedy_bernoulli.ipynb  explorative_mode_trajectory_optimisation_mvn_full_cov.ipynb  mode_bayesian_optimisation_static.ipynb
examples/velocity_controlled_point_mass/reports/: ckpts_to_npz.py  create_figures.py  npz_to_figures.py  plot_env.py  plot_svgp.py
experiments/: README.md  callbacks.py  export_wandb_results_to_csv.py  run_all_experiments.sh  run_experiment.py  run_experiment.slrm  save_runs_initial_submission.yaml  saved_runs.yaml  train.py  training.py  triton_insructions.md  utils.py
experiments/configs/: keras_dynamics_config.yaml  main.yaml
experiments/plot/: constaint_expanding_figure.py  controller.py  dynamics.py  figure-greedy-exploitation-failing.py  figures.py  plot_all_figures.py  plot_gifs.py  plot_num_constraint_violations.py  utils.py
modeopt/: constraints.py  cost_functions.py  custom_types.py  mode_opt.py  monitor.py  objectives.py  policies.py  rollouts.py  utils.py
modeopt/constraints/: collocation.py  control.py  mode_chance_constraints.py
modeopt/controllers/: __init__.py  base.py  feedback.py  non_feedback.py  utils.py
modeopt/dynamics/: __init__.py  base.py  conditionals.py  gp.py  mosvgpe_dynamics.py  multimodal.py  nominal.py  svgp.py  utils.py
modeopt/plotting/: contour_plotter.py
modeopt/superseded/: constraints.py  mode_opt.py  policies_old.py
modeopt/trajectories/: __init__.py  base.py  flat_output.py  geodesics.py  variational.py
modeopt/trajectory_optimisers/: __init__.py  base.py  explorative.py  variational.py
modeopt/utils/: utils.py
moderl/: .flake8  constraints.py  cost_functions.py  custom_types.py  metrics.py  mode_opt.py  mode_opt_old.py  mode_rl.py  objectives.py  reward_functions.py  rollouts.py  utils.py
moderl/constraints/: __init__.py  collocation.py  mode_chance_constraints.py
moderl/controllers/: __init__.py  base.py  controller.py  explorative_controller.py  feedback.py  objectives.py  trajectory_optimiser.py  utils.py
moderl/dynamics/: __init__.py  conditionals.py  dynamics.py  mosvgpe_dynamics.py  svgp.py
moderl/monitor/: callbacks.py
moderl/optimisers/: __init__.py  trajectory_optimiser.py
moderl/plotting/: __init__.py
moderl/trajectories/: __init__.py  geodesics.py  variational.py
moderl/trajectory_optimisers/: base.py  explorative.py
moderl/utils/: __init__.py  keras.py  mlflow.py
mosvgpe/: __init__.py  custom_types.py  experts.py  gating_networks.py  gp.py  pyproject.toml  utils.py
mosvgpe/mixture_of_experts/: base.py  mosvgpe.py
mosvgpe/mosvgpe/: mixture_of_experts.py
paper/: Makefile  aistats2023.sty  emacs-config.el  paper.org  paper.tex
poster/: .latexmkrc  beamerthemeaalto.sty  bibliography.bib  main.tex
scenario-1/: generate_const_action_dataset.py  generate_dataset.py
scenario-1/configs/: env_config.toml
scenario-2/: generate_const_action_dataset.py  generate_dataset.py
scenario-2/configs/: env_config.toml
simenvs/: __init__.py  core.py  generate_dataset_from_env.py  parse_env_toml_config.py  quadcopter_sim.py
simenvs/point_mass/: __init__.py
simenvs/quadcopter/: __init__.py  quadcopter_2D_sim.py
simenvs/velocity_controlled_point_mass/: plotter.py
subtrees/: README.md
subtrees/mosvgpe/: .gitignore  pyproject.toml
subtrees/mosvgpe/examples/: __init__.py  train.py  utils.py
subtrees/mosvgpe/examples/configs/: main.yaml
subtrees/mosvgpe/examples/configs/dataset/: mcycle.yaml
subtrees/mosvgpe/examples/configs/model/experts_list/expert_one/: default.yaml
subtrees/mosvgpe/examples/configs/model/experts_list/expert_one/inducing_variable/: ones.yaml
subtrees/mosvgpe/examples/configs/model/experts_list/expert_two/mean_function/: constant.yaml
subtrees/mosvgpe/examples/configs/model/gating_network/: bernoulli.yaml
subtrees/mosvgpe/examples/configs/model/gating_network/mean_function/: zero.yaml
subtrees/mosvgpe/examples/mcycle/: plot.py  plot_mcycle.py  train_MixtureOfSVGPExperts.py  utils.py
subtrees/mosvgpe/examples/velocity_controlled_point_mass/: train_MixtureOfSVGPExperts.py
subtrees/mosvgpe/mosvgpe/: __init__.py  custom_types.py  experts.py  gating_networks.py  mixture_of_experts.py  utils.py
subtrees/mosvgpe/mosvgpe/callbacks/: tensorboard.py
subtrees/mosvgpe/mosvgpe/keras/: __init__.py  functions.py  utils.py
subtrees/mosvgpe/mosvgpe/keras/inducing_variables/: __init__.py  inducing_variables.py
subtrees/mosvgpe/mosvgpe/keras/inducing_variables/multioutput/: __init__.py  inducing_variables.py
subtrees/mosvgpe/mosvgpe/keras/kernels/: __init__.py  stationaries.py
subtrees/mosvgpe/mosvgpe/keras/kernels/multioutput/: __init__.py  kernels.py  single_output_kernel_objects.py
subtrees/mosvgpe/mosvgpe/keras/likelihoods/: __init__.py  multiclass.py  scalar_continuous.py  scalar_discrete.py
subtrees/simenvs/: pyproject.toml
tests/: test_dynamics.py
vimpc/: controllers.py  cost_functions.py  dynamics.py  policies.py
(+1630 files in other folders)
