[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ModeRL"
version = "0.1.0"
description = "Mode remaining exploration for model-based-reinforcement learning in TensorFlow/GPflow."
license = {text = "Apache-2.0"}
keywords = ["model-based reinforcement learning","mixtures-of-gaussian-process-experts", "gaussian-processes", "machine-learning", "variational-inference"]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "gpflow",
    "numpy",
    "tensorflow-probability",
    "tensorflow>=2.4.0; platform_system!='Darwin' or platform_machine!='arm64'",
    # NOTE: Support of Apple Silicon MacOS platforms is in an experimental mode
    "tensorflow-macos>=2.4.0; platform_system=='Darwin' and platform_machine=='arm64'",
    # "matplotlib",
    "tensor_annotations",
    # "mosvgpe @ git+https://github.com/aidanscannell/mosvgpe#egg=mosvgpe",
    # TODO make this agnostic of my file path...
    "mosvgpe @ file:///Users/scannea1/python-projects/ModeRL/subtrees/mosvgpe",
    "simenvs@ file:///Users/scannea1/python-projects/ModeRL/subtrees/simenvs",
    # "mosvgpe @ file://./mosvgpe",
    # "mosvgpe @ file://./mosvgpe",
    # "mosvgpe @ git+https://github.com/aidanscannell/mosvgpe#egg=mosvgpe",
    # "geoflow @ git+https://github.com/aidanscannell/geoflow#egg=geoflow",
    "wandb",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
dev = ["black", "pyright", "isort", "pyflakes", "pytest"]
# examples = ["pandas", "jupyter", "hydra-core", "simenvs @ git+https://github.com/aidanscannell/simenvs.git@v0.2.0#egg=simenvs"]
examples = ["pandas", "jupyter", "hydra-core"]

[tool.setuptools]
packages = ["moderl"]
